2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, sp02/task1.c, sp24/resume.c,
	sp30/resume.c, sp41/init.c, sp42/init.c: Add new Object Services
	collection. This changed the name of a few previously public but
	undocumented services and added a some new services.
	* sp43/.cvsignore, sp43/Makefile.am, sp43/init.c, sp43/sp43.scn,
	sp43/system.h: New files.

2008-01-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spfatal10/.cvsignore: New file.

2008-01-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spfatal01/.cvsignore, spfatal02/.cvsignore, spfatal03/.cvsignore,
	spfatal04/.cvsignore, spfatal05/.cvsignore, spfatal06/.cvsignore,
	spfatal07/.cvsignore, spfatal08/.cvsignore, spfatal09/.cvsignore:
	New files.

2008-01-28	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac: Added fatal error tests
	* spfatal01/Makefile.am, spfatal01/spfatal01.scn, spfatal01/testcase.h,
	spfatal02/Makefile.am, spfatal02/spfatal02.scn, spfatal02/testcase.h,
	spfatal03/Makefile.am, spfatal03/spfatal03.scn, spfatal03/testcase.h,
	spfatal04/Makefile.am, spfatal04/spfatal04.scn, spfatal04/testcase.h,
	spfatal05/Makefile.am, spfatal05/spfatal05.scn, spfatal05/testcase.h,
	spfatal06/Makefile.am, spfatal06/spfatal06.scn, spfatal06/testcase.h,
	spfatal07/Makefile.am, spfatal07/spfatal07.scn, spfatal07/testcase.h,
	spfatal08/Makefile.am, spfatal08/spfatal08.scn, spfatal08/testcase.h,
	spfatal09/Makefile.am, spfatal09/spfatal09.scn, spfatal09/testcase.h,
	spfatal10/Makefile.am, spfatal10/spfatal10.scn, spfatal10/testcase.h,
	spfatal_support/init.c, spfatal_support/system.h: New files.

2008-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp28/init.c, sp28/sp28.scn, sp29/init.c, sp29/sp29.scn, sp32/init.c,
	sp32/sp32.scn, sp33/init.c, sp33/sp33.scn, sp42/init.c: Fix end of
	test messages.

2008-01-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp34/changepri.c, sp35/priinv.c: Convert the Objects_Name type from a