@@ -5,7 +5,7 @@ TA1 - rtems_task_delete - RTEMS_INVALID_ID
 TA1 - rtems_task_get_note - RTEMS_INVALID_NUMBER
 TA1 - rtems_task_get_note - RTEMS_INVALID_ID
 TA1 - rtems_task_get_note - RTEMS_INVALID_ID
-TA1 - rtems_task_get_note - RTEMS_INVALID_ID
+TA1 - rtems_task_get_note - RTEMS_INVALID_ID (no tasks in API)
 TA1 - rtems_task_ident - current task RTEMS_SUCCESSFUL
 TA1 - rtems_task_ident - global RTEMS_INVALID_NAME
 TA1 - rtems_task_ident - local RTEMS_INVALID_NAME
